<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/rg_4_order_state"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        >

        <RadioButton
            android:id="@+id/rb_order_no_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_no_send"
            android:textColor="@drawable/bottom_text_change"
            android:textSize="12sp"
            android:button="@null"
            android:layout_weight="1"

            />

        <RadioButton
            android:id="@+id/rb_order_sending"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_sending"
            android:textColor="@drawable/bottom_text_change"
            android:textSize="12sp"
            android:button="@null"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rb_order_finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_finish"
            android:textColor="@drawable/bottom_text_change"
            android:textSize="12sp"
            android:button="@null"
            android:layout_weight="1"
            />


        <RadioButton
        android:id="@+id/rb_back_goods_in_down_child"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/order_back_goods_apply"
        android:textColor="@drawable/bottom_text_change"
        android:textSize="12sp"
        android:button="@null"
        android:layout_weight="1"
        />


        <RadioButton
            android:id="@+id/rb_denied_in_down_child"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_denied"
            android:textColor="@drawable/bottom_text_change"
            android:textSize="12sp"
            android:button="@null"
            android:layout_weight="1"
            />







    </RadioGroup>

</LinearLayout>